src/objects/Parts_Labour_Information__c.object
<CustomObject>
    <description>Group: CR
Labour Service Information Layout</description>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_Failed_Part_S_N__c</fullName>
        <description>Serial # of the failed part</description>
        <inlineHelpText>Serial # of the failed part</inlineHelpText>
        <label>Core Failed Part S/N</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Replaced_Part_S_N__c</fullName>
        <description>Serial # of the replacement part</description>
        <inlineHelpText>Serial # of the replacement part</inlineHelpText>
        <label>Core Replaced Part S/N</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Critical_Back_Order_ETA__c</fullName>
        <label>Critical Back Order ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Pay__c</fullName>
        <formula>Total_Price_Negotiated__c -  Honda_Canada_Contribution__c - Dealer_Parts_Contribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_CBO_was_placed__c</fullName>
        <label>Date CBO was placed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Labour_Contribution__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dealer Labour Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Negotiated_Labour_Rate__c</fullName>
        <description>Group: CR Financial Assistance 
Layout: Labour Service Information Layout</description>
        <label>Dealer Negotiated Labour Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Negotiated_Labour_Time__c</fullName>
        <description>What the dealer is agreeing to (possible reduction)</description>
        <inlineHelpText>What the dealer is agreeing to (possible reduction)</inlineHelpText>
        <label>Dealer Negotiated Labour Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Negotiated_Part_Price__c</fullName>
        <description>Part Price (Net) + Markup (Adjusted)</description>
        <formula>IF( Dealer_Negotiated_Price_amount__c == 0,  Part_Price_Net__c * (1+ Dealer_Negotiated_Price_pcnt__c) , Part_Price_Net__c + Dealer_Negotiated_Price_amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Part Price (Net) + Markup (Adjusted)</inlineHelpText>
        <label>Dealer Negotiated Part Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Negotiated_Price_amount__c</fullName>
        <inlineHelpText>Negotiate dollars ($) + Net Price</inlineHelpText>
        <label>Dealer Negotiated Price ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Negotiated_Price_pcnt__c</fullName>
        <inlineHelpText>Negotiated percentage (%) + Net Price</inlineHelpText>
        <label>Dealer Negotiated Price (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dealer_Negotiated_Sublet__c</fullName>
        <description>Group: CR
Layout: Labour Service Information</description>
        <formula>Sublet__c - Dealer_Sublet_Contribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Negotiated Sublet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Parts_Contribution__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dealer Parts Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Sublet_Contribution__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dealer Sublet Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flat_Rate_Labour_Time_Warranty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Alloted time in hours for repair based on flat time rate manual</description>
        <inlineHelpText>Alloted time in hours for repair based on flat time rate manual</inlineHelpText>
        <label>Flat Rate Labour Time - Warranty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Honda_Canada_Contribution__c</fullName>
        <formula>(Honda_Canada_Labour_Contribution__c +  Honda_Canada_Sublet_Contribution__c)  +  Honda_Canada_Parts_Contribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Honda Canada Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Honda_Canada_Labour_Contribution__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Honda Canada Labour Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Honda_Canada_Parts_Contribution__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Honda Canada Parts Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Honda_Canada_Sublet_Contribution__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CR Financial Assistant</description>
        <label>Honda Canada Sublet Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JD_Julian_Date__c</fullName>
        <label>JD (Julian Date)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labour_Cost_Retail__c</fullName>
        <description>Retail cost of labour</description>
        <formula>Labour_Rate_Retail__c * Labour_Time_Retail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Retail cost of labour</inlineHelpText>
        <label>Labour Cost - Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labour_Cost_Warranty__c</fullName>
        <description>flat rate hours x hourly warranty labour rate.</description>
        <formula>Flat_Rate_Labour_Time_Warranty__c *   Labour_Rate_Warranty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>flat rate hours x hourly warranty labour rate.</inlineHelpText>
        <label>Labour Cost - Warranty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labour_Operation_Number_LON__c</fullName>
        <description>Added to Parts/Labour Related List. To be used under CH - Dealer, Warranty Page Layout</description>
        <label>Labour Operation Number (LON)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labour_Rate_Retail__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Walk in rate of pay per hour at dealer</description>
        <inlineHelpText>Walk in rate of pay per hour at dealer</inlineHelpText>
        <label>Labour Rate - Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labour_Rate_Warranty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Warranty pay rate per hour from Dealer profile</description>
        <inlineHelpText>Warranty pay rate per hour from Dealer profile</inlineHelpText>
        <label>Labour Rate - Warranty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labour_Time_Retail__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Hours to complete repair</description>
        <inlineHelpText>Hours to complete repair</inlineHelpText>
        <label>Labour Time - Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_No__c</fullName>
        <label>Lot #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurements__c</fullName>
        <description>Part measurement details (for fitting purposes)</description>
        <inlineHelpText>Part measurement details (for fitting purposes)</inlineHelpText>
        <label>Measurements</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Muffler_Certificate_No__c</fullName>
        <description>To be used for Warranty</description>
        <label>Muffler Certificate #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Category__c</fullName>
        <label>Part Category</label>
        <picklist>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel &amp; Exhaust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating &amp; Air Conditioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior/Bumper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transmission</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Part_Detailed_Description__c</fullName>
        <description>Description of part</description>
        <inlineHelpText>Description of part</inlineHelpText>
        <label>Part Detailed Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Part_Mark_Up_Retail_amount__c</fullName>
        <formula>IF( Part_Price_Retail__c &gt; 0,  Part_Price_Retail__c - Part_Price_Net__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer pay cost Mark Up of part in dollars ($)</inlineHelpText>
        <label>Part Mark Up - Retail ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_Mark_Up_Retail_percent__c</fullName>
        <formula>IF( Part_Price_Retail__c &gt; 0, (Part_Price_Retail__c - Part_Price_Net__c)/Part_Price_Net__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer pay cost Mark Up of part in percentage (%)</inlineHelpText>
        <label>Part Mark Up - Retail (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Part_Mark_Up_Warranty_amount__c</fullName>
        <label>Part Mark Up - Warranty  ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_Mark_Up_Warranty_percent__c</fullName>
        <label>Part Mark Up - Warranty (%)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Part_Price_Net__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total net price of part.</description>
        <inlineHelpText>Total net price of part.</inlineHelpText>
        <label>Part Price - Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_Price_Retail__c</fullName>
        <inlineHelpText>Customer pay cost of part</inlineHelpText>
        <label>Part Price - Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_Price_Warranty__c</fullName>
        <description>Cost of part at Warranty rate</description>
        <formula>IF(Part_Mark_Up_Warranty_amount__c == 0, Part_Price_Net__c *  (1+Part_Mark_Up_Warranty_percent__c), Part_Price_Net__c + Part_Mark_Up_Warranty_amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost of part at Warranty rate</inlineHelpText>
        <label>Part Price - Warranty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parts_Distribution_Center_PDC__c</fullName>
        <label>Parts Distribution Center (PDC)</label>
        <picklist>
            <picklistValues>
                <fullName>Calgary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montreal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toronto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purolator_Tracking_No__c</fullName>
        <inlineHelpText>For multiple tracking #&apos;s, please separate them by COMMAS.
DO NOT put space between the commas or any of the characters.</inlineHelpText>
        <label>Purolator Tracking #</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_No__c</fullName>
        <label>Reference #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sublet__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Dealer to provide</description>
        <inlineHelpText>Dealer to provide</inlineHelpText>
        <label>Sublet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Dealer_Negotiated_Labour_Cost__c</fullName>
        <formula>Dealer_Negotiated_Labour_Rate__c * Dealer_Negotiated_Labour_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Dealer Negotiated Labor
+ Dealer Negotiated Sublet</inlineHelpText>
        <label>Total Dealer Negotiated Labour Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Dealer_Negotiated_Parts__c</fullName>
        <description>quantity * Part Price (Adjusted, Retail)</description>
        <formula>Quantity__c *  Dealer_Negotiated_Part_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>quantity * Part Price (Adjusted, Retail)</inlineHelpText>
        <label>Total Dealer Negotiated Parts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Parts_Price_Net__c</fullName>
        <formula>Quantity__c * Part_Price_Net__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Parts Price - Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Parts_Price_Retail__c</fullName>
        <description>quantity * part price (retail)</description>
        <formula>Quantity__c *  Part_Price_Retail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>quantity * part price (retail)</inlineHelpText>
        <label>Total Parts Price - Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Parts_Price_Warranty__c</fullName>
        <description>quantity * part price (warranty)</description>
        <formula>Quantity__c * Part_Price_Warranty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>quantity * part price (warranty)</inlineHelpText>
        <label>Total Parts Price - Warranty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_Negotiated__c</fullName>
        <formula>Total_Dealer_Negotiated_Parts__c +  Total_Dealer_Negotiated_Labour_Cost__c + Dealer_Negotiated_Sublet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price - Negotiated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_Retail__c</fullName>
        <description>Group: CR
Financial Assistance case layout on Parts/Labour Related List View</description>
        <formula>(Sublet__c + Labour_Cost_Retail__c) + (Quantity__c * Part_Price_Retail__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price - Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_Warranty__c</fullName>
        <description>Group: CR
Financial Assistance Case Layout</description>
        <formula>(Labour_Cost_Warranty__c  + Sublet__c) + (Quantity__c * Part_Price_Warranty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price - Warranty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VC_Number__c</fullName>
        <label>VC Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Parts/Labour Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Part # / Labour Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parts/Labour Information</pluralLabel>
    <recordTypes>
        <fullName>Labour_Service_Information</fullName>
        <active>true</active>
        <label>Labour Service Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parts_Order_Item</fullName>
        <active>true</active>
        <label>Parts Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parts_Service_Information</fullName>
        <active>true</active>
        <label>Parts Service Information</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Must_enter_one_adjusted_markup_only</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName == &quot;Parts_Service_Information&quot;) &amp;&amp; NOT(ISBLANK( Dealer_Negotiated_Price_amount__c )) &amp;&amp; NOT(ISBLANK( Dealer_Negotiated_Price_pcnt__c ))</errorConditionFormula>
        <errorDisplayField>Dealer_Negotiated_Price_amount__c</errorDisplayField>
        <errorMessage>You must enter either ONE of Markup Amount ($) or Markup Percent (%), but NOT both</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_enter_one_markup_field_only_warrant</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName == &quot;Parts_Service_Information&quot;) &amp;&amp; NOT(ISBLANK( Part_Mark_Up_Warranty_amount__c )) 
&amp;&amp; NOT(ISBLANK( Part_Mark_Up_Warranty_percent__c ))</errorConditionFormula>
        <errorDisplayField>Part_Mark_Up_Warranty_amount__c</errorDisplayField>
        <errorMessage>You must enter either ONE of Markup Amount ($) or Markup Percent (%), but NOT both</errorMessage>
    </validationRules>
</CustomObject>